# predictempo

./: .gitignore  README.md  pyproject.toml
data/: ejp_days-2016-2024.csv  merged_meteo_red_days_from_20170101.feather
notebooks/: download_meteo_data.ipynb  merge_meteo_red_days_data.ipynb  modeling.ipynb  modelisation.ipynb  temperature_dataset_creation.ipynb
predictempo-app/: README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json
predictempo-app/app/(tabs)/: _layout.tsx  red_days_prediction.tsx
predictempo-app/assets/neural_networks/: lgbm_model_red_days_2025_02_10.onnx  lgbm_model_red_days_2025_02_21.onnx  lgbm_model_red_days_2025_02_28.onnx  lgbm_model_red_days_2025_03_12.onnx  lgbm_model_red_days_2026_01_09.onnx  lgbm_model_red_days_2026_01_14.onnx
predictempo-app/services/: onnxPrediction.ts  onnxPrediction.tsx  redDaysRetriever.tsx  weatherForecastRetriever.tsx
