[project]
name = "predictempo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.1.0",
    "kaleido>=1.2.0",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "onnxmltools>=1.14.0",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pip>=25.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.39.0",
    "skl2onnx>=1.19.1",
    "tqdm>=4.67.1",
]
